force-app/main/default/objects/Message__c/fields/Chat__c.field-meta.xml
<CustomField>
    <fullName>Chat__c</fullName>
    <label>Chat</label>
    <referenceTo>Chat__c</referenceTo>
    <relationshipLabel>Messages</relationshipLabel>
    <relationshipName>Messages</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>