force-app/main/default/objects/Message__c/fields/MessageId__c.field-meta.xml
<CustomField>
    <fullName>MessageId__c</fullName>
    <externalId>true</externalId>
    <label>MessageId</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>